# FilterProject

./: 00_pytorch_fundamentals.ipynb  CMakeLists.txt  image.ppm  image.tga  imgui.ini
include/: filters.h  image_encoding.h  kernel_computation.h
include/core/: Image.h  ImageEncoder.h  saving.h
include/filters/: ConvolutionFilter.h  IFilter.h
include/filters/convolution/: ConvolutionCpu.h  ConvolutionEngine.h  ConvolutionGpu.cuh  KernelComputer.h
include/filters/types/: AlgorithmType.h  BackendType.h  ConvolutionType.h
include/ui/: Application.h
src/: main.cpp
src/core/: Image.cpp  ImageEncoder.cpp  saving.cpp
src/filters/: ConvolutionFilter.cpp
src/filters/convolution/: ConvolutionCpu.cpp  ConvolutionEngine.cpp  ConvolutionGpu.cu  KernelComputer.cpp
src/ui/: Application.cpp  FilterPanel.cpp  MenuBar.cpp
